The following Home page changes have been made - dropdown menu - heading size is smaller - text no longer overlaps with images

--- a/web design/Styles/AllPages.css
+++ b/web design/Styles/AllPages.css
@@ -27,7 +27,7 @@ body {
 
 /* Styling for the logo in the navigation bar */
 .logo {
-  max-width: 70%;
+  max-width: 55%;
   height: auto;
 }
 /* Prevent hover effect on the logo */
@@ -44,7 +44,7 @@ body {
 }
 
 .NavHead {
-  padding-top: 30px;
+  padding-top: 20px;
 }
 
 .navbar a {
@@ -126,7 +126,7 @@ screen mode */
   display: none;
 }
 /* Media query for screen sizes below 600px */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1010px) {
   /* Hide the regular nav links */
   .NavHead {
     display: none;
@@ -135,8 +135,15 @@ screen mode */
   /* Show the dropdown menu icon */
   .dropdown {
     display: block;
-    padding-top: 8%;
+    top: 20px; /* Keep it aligned to the top of the header */
+    right: 20px; /* Adjust as needed to align to the right */
+    position: absolute;
   }
+  /* Logo when in mobile screen mode */
+.logo {
+  max-width: 55%;
+  height: auto;
+}
 }
 /* Footer styling*/
 .footer {
